--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "Loop"]
 	path = Loop
-	url=https://github.com/ivalkou/Loop.git
-	branch = freeaps
+	url=https://github.com/bjornoleh/Loop.git
+	branch = profile-fix
 [submodule "LoopKit"]
 	path = LoopKit
 	url = https://github.com/LoopKit/LoopKit.git
