--- a/.gitmodules
+++ b/.gitmodules
@@ -23,8 +23,8 @@
 	branch = dev
 [submodule "rileylink_ios"]
 	path = rileylink_ios
-	url = https://github.com/ps2/rileylink_ios.git
-	branch = carthage-pin
+	url = https://github.com/bjornoleh/rileylink_ios.git
+	branch = RL_battery-Carthage-pin
 [submodule "Amplitude-iOS"]
 	path = Amplitude-iOS
 	url = https://github.com/LoopKit/Amplitude-iOS.git
