My Crowdin forks of Loop and rileylink-ios

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "Loop"]
 	path = Loop
-	url=https://github.com/loopnlearn/Loop.git
-	branch = freeaps
+	url=https://github.com/Jon-b-m/Loop.git
+	branch = Crowdin
 [submodule "LoopKit"]
 	path = LoopKit
 	url = https://github.com/LoopKit/LoopKit.git
@@ -19,7 +19,8 @@
 	url = https://github.com/LoopKit/G4ShareSpy.git
 [submodule "rileylink_ios"]
 	path = rileylink_ios
-	url = https://github.com/ps2/rileylink_ios.git
+	url = https://github.com/Jon-b-m/rileylink_ios.git
+	branch = Crowdin
 [submodule "Amplitude-iOS"]
 	path = Amplitude-iOS
 	url = https://github.com/LoopKit/Amplitude-iOS.git
