--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,8 @@
 	branch = Crowdin
 [submodule "LoopKit"]
 	path = LoopKit
-	url = https://github.com/LoopKit/LoopKit.git
+	url = https://github.com/Jon-b-m/LoopKit.git
+	branch = Crowdin
 [submodule "CGMBLEKit"]
 	path = CGMBLEKit
 	url = https://github.com/LoopKit/CGMBLEKit.git
