--- a/Loop.xcworkspace/xcshareddata/xcschemes/Loop (Workspace).xcscheme
+++ b/Loop.xcworkspace/xcshareddata/xcschemes/Loop (Workspace).xcscheme
@@ -392,6 +392,34 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "432B0E871CDFC3C50045347B"
+               BuildableName = "LibreDirectClient.framework"
+               BlueprintName = "LibreDirectClient"
+               ReferencedContainer = "container:libre-direct-client-swift/LibreDirectClient.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "43A8EC81210E664300A81379"
+               BuildableName = "LibreDirectClientUI.framework"
+               BlueprintName = "LibreDirectClientUI"
+               ReferencedContainer = "container:libre-direct-client-swift/LibreDirectClient.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "43776F8B1B8022E90074EA36"
                BuildableName = "FreeAPS.app"
                BlueprintName = "Loop"
