--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "xdrip-client-swift"]
 	path = xdrip-client-swift
 	url = https://github.com/loopnlearn/xdrip-client-swift
+[submodule "xdrip-client-swift-right"]
+	path = xdrip-client-swift-right
+	url = https://github.com/bjornoleh/xdrip-client-swift-right
