Fix xDripClientRightUI.framework (was missing _Right_)

--- a/Loop.xcworkspace/xcshareddata/xcschemes/Loop (Workspace).xcscheme
+++ b/Loop.xcworkspace/xcshareddata/xcschemes/Loop (Workspace).xcscheme
@@ -407,7 +407,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "43A8EC81210E664300A81379"
-               BuildableName = "xDripClientUI.framework"
+               BuildableName = "xDripClientRightUI.framework"
                BlueprintName = "xDripClientRightUI"
                ReferencedContainer = "container:xdrip-client-swift-right/xDripClientRight.xcodeproj">
             </BuildableReference>
