Add CAREGIVER_BUNDLE_IDENTIFIER = com.${DEVELOPMENT_TEAM}.loopkit.LoopCaregiver to LoopCaregiver.xcconfig
And to LoopCaregiver target:
PRODUCT_BUNDLE_IDENTIFIER = "$(CAREGIVER_BUNDLE_IDENTIFIER)";

--- a/LoopCaregiver/LoopCaregiver.xcconfig
+++ b/LoopCaregiver/LoopCaregiver.xcconfig
@@ -3,6 +3,10 @@
 //  LoopCaregiver
 //
 
+// This is automatically disambiguated by development team, but you may choose to change this to
+// support running multiple apps simultaneously.
+CAREGIVER_BUNDLE_IDENTIFIER = com.${DEVELOPMENT_TEAM}.loopkit.LoopCaregiver
+
 // Code signing and provisioning [DEFAULT]
 LOOP_DEVELOPMENT_TEAM =
 
