--- a/.github/workflows/build_loopcaregiver.yml
+++ b/.github/workflows/build_loopcaregiver.yml
@@ -1,4 +1,4 @@
-name: Build Loop
+name: Build LoopCaregiver
 on:
   workflow_dispatch:
 
@@ -20,9 +20,9 @@ jobs:
       - name: Patch Match Tables
         run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
       
-      # Build signed Loop IPA file
+      # Build signed LoopCaregiver IPA file
       - name: Fastlane Build & Archive
-        run: fastlane loop_build
+        run: fastlane caregiver_build
         env:
           TEAMID: ${{ secrets.TEAMID }}
           GH_PAT: ${{ secrets.GH_PAT }}
@@ -33,7 +33,7 @@ jobs:
       
       # Upload to TestFlight
       - name: Fastlane upload to TestFlight
-        run: fastlane loop_release
+        run: fastlane caregiver_release
         env:
           TEAMID: ${{ secrets.TEAMID }}
           GH_PAT: ${{ secrets.GH_PAT }}
