--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+          ref: main # specify branch here to allow builds of any default or non-default branch name (must run from default branch for scheduled builds)
       - uses: gautamkrishnar/keepalive-workflow@v1 # using the workflow with default settings
         with:
           time_elapsed: 29 # Time elapsed from the previous commit to trigger a new automated commit (in days)
