--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -1,4 +1,4 @@
-name: 4. Build Loop
+name: 4. Build Loop 
 run-name: Build Loop
 on:
   workflow_dispatch:
@@ -9,6 +9,11 @@ on:
   ## Remove the "#" sign from the beginning of the two lines below to get automated builds every month
   #schedule:
     #- cron: '0 17 1 * *' # Runs at 17:00 UTC on the 1st in every month.
+env:
+  UPSTREAM_REPO: LoopKit/LoopWorkspace
+  UPSTREAM_BRANCH: main
+  TARGET_BRANCH: main
+  
 
 jobs:
   secrets:
@@ -27,7 +32,7 @@ jobs:
       with:
         # optional: set the branch to checkout,
         # sync action checks out your 'target_sync_branch' anyway
-        ref: main
+        ref: ${{ env.TARGET_BRANCH }}
         #submodules: recursive
         # REQUIRED if your upstream repo is private (see wiki)
         persist-credentials: false
@@ -38,13 +43,13 @@ jobs:
       id: sync
       uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
       with:
-        target_sync_branch: main
+        target_sync_branch: ${{ env.TARGET_BRANCH }}
         target_branch_checkout_args: --recurse-submodules
         shallow_since: 3 months ago
         # REQUIRED 'target_repo_token' exactly like this!
         target_repo_token: ${{ secrets.GH_PAT }}
-        upstream_sync_branch: main
-        upstream_sync_repo: LoopKit/LoopWorkspace
+        upstream_sync_branch: ${{ env.UPSTREAM_BRANCH }}
+        upstream_sync_repo: ${{ env.UPSTREAM_REPO }}
         # upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
 
         # Set test_mode true to run tests instead of the true action!!
@@ -75,7 +80,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-          ref: main # specify branch here to allow builds of any default or non-default branch name (must run from default branch for scheduled builds)
+          ref: ${{ env.TARGET_BRANCH }} # specify branch here to allow builds of any default or non-default branch name (must run from default branch for scheduled builds)
       - uses: gautamkrishnar/keepalive-workflow@v1 # using the workflow with default settings
         with:
           time_elapsed: 27 # Time elapsed from the previous commit to trigger a new automated commit (in days)
