--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -18,56 +18,9 @@ jobs:
   secrets:
     uses: ./.github/workflows/validate_secrets.yml
     secrets: inherit
-   
-  upstream_sync:
-    runs-on: ubuntu-latest
-    name: Sync latest commits from upstream repo
 
-    steps:
-    # REQUIRED step
-    # Step 1: run a standard checkout action, provided by github
-    - name: Checkout target repo
-      uses: actions/checkout@v3
-      with:
-        # optional: set the branch to checkout,
-        # sync action checks out your 'target_sync_branch' anyway
-        ref: ${{ env.TARGET_BRANCH }}
-        #submodules: recursive
-        # REQUIRED if your upstream repo is private (see wiki)
-        persist-credentials: false
-
-    # REQUIRED step
-    # Step 2: run the sync action
-    - name: Sync upstream changes
-      id: sync
-      uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
-      with:
-        target_sync_branch: ${{ env.TARGET_BRANCH }}
-        target_branch_checkout_args: --recurse-submodules
-        shallow_since: 3 months ago
-        # REQUIRED 'target_repo_token' exactly like this!
-        target_repo_token: ${{ secrets.GH_PAT }}
-        upstream_sync_branch: ${{ env.UPSTREAM_BRANCH }}
-        upstream_sync_repo: ${{ env.UPSTREAM_REPO }}
-        # upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
-
-        # Set test_mode true to run tests instead of the true action!!
-        test_mode: false
-      
-    # Step 3: Display a sample message based on the sync output var 'has_new_commits'
-    - name: New commits found
-      if: steps.sync.outputs.has_new_commits == 'true'
-      run: echo "New commits were found to sync."
-    
-    - name: No new commits
-      if: steps.sync.outputs.has_new_commits == 'false'
-      run: echo "There were no new commits."
-      
-    - name: Show value of 'has_new_commits'
-      run: echo ${{ steps.sync.outputs.has_new_commits }}
-    
-  build:
-    needs: [secrets, upstream_sync]
+  upstream_sync_and_build:
+    needs: [secrets]
     runs-on: macos-12
     steps:
       # Uncomment to manually select latest Xcode if needed
@@ -79,11 +32,39 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-          ref: ${{ env.TARGET_BRANCH }} # specify branch here to allow builds of any default or non-default branch name (must run from default branch for scheduled builds)
+          ref: ${{ env.TARGET_BRANCH }} 
       - uses: gautamkrishnar/keepalive-workflow@v1 # using the workflow with default settings
         with:
           time_elapsed: 27 # Time elapsed from the previous commit to trigger a new automated commit (in days)
       
+      # Run the sync action
+      - name: Sync upstream changes
+        id: sync
+        uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
+        with:
+          target_sync_branch: ${{ env.TARGET_BRANCH }}
+          target_branch_checkout_args: --recurse-submodules
+          shallow_since: 6 months ago
+          # REQUIRED 'target_repo_token' exactly like this!
+          target_repo_token: ${{ secrets.GH_PAT }}
+          upstream_sync_branch: ${{ env.UPSTREAM_BRANCH }}
+          upstream_sync_repo: ${{ env.UPSTREAM_REPO }}
+          # upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
+          # Set test_mode true to run tests instead of the true action!!
+          test_mode: false
+      
+      # Step 3: Display a sample message based on the sync output var 'has_new_commits'
+      - name: New commits found
+        if: steps.sync.outputs.has_new_commits == 'true'
+        run: echo "New commits were found to sync."
+    
+      - name: No new commits
+        if: steps.sync.outputs.has_new_commits == 'false'
+        run: echo "There were no new commits."
+      
+      - name: Show value of 'has_new_commits'
+        run: echo ${{ steps.sync.outputs.has_new_commits }}
+    
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
         run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
