--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -13,6 +13,7 @@ env:
   UPSTREAM_REPO: LoopKit/LoopWorkspace
   UPSTREAM_BRANCH: main
   TARGET_BRANCH: main
+  SYNC_UPSTREAM: 'true' # set to 'false' or 'true' to disable / enable syncing of fork with upstream repository
 
 jobs:
   secrets:
@@ -36,6 +37,7 @@ jobs:
       
       # Run the sync action
       - name: Sync upstream changes
+        if: ${{ env.SYNC_UPSTREAM == 'true' }}
         id: sync
         uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
         with:
