--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -68,6 +68,15 @@ jobs:
         with:
           time_elapsed: 27 # Time elapsed from the previous commit to trigger a new automated commit (in days)
       
+      # Customize Loop: Download and apply patches
+      - name: Customize Loop
+        # Submodule Loop patches:
+        run: wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P /{GITHUB_WORKSPACE}/Loop | git apply -v --whitespace=fix
+        
+        # Submodule OmniBLE patches:
+        
+        # Submodule RileyLink_iOS patches:
+        # ... etcetera
     
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
