--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -73,6 +73,7 @@ jobs:
         # Submodule Loop patches:
         run: |
           wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P ./#{GITHUB_WORKSPACE}/Loop
+          cd Loop
           git apply ./#{GITHUB_WORKSPACE}/Loop/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -v --whitespace=fix
 
         # Submodule OmniBLE patches:
