--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P ./#{GITHUB_WORKSPACE}/Loop
           cd Loop
-          git apply ./#{GITHUB_WORKSPACE}/Loop/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -v --whitespace=fix
+          git apply bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -v --whitespace=fix
 
         # Submodule OmniBLE patches:
         
