--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Customize Loop
         # Submodule Loop patches:
         run: |
-          wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P ./#{GITHUB_WORKSPACE}/Loop
+          wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P ./#{GITHUB_WORKSPACE}/Loop/
           cd Loop
           git apply bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -v --whitespace=fix
 
