--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -21,7 +21,7 @@ jobs:
     secrets: inherit
 
   upstream_sync_and_build:
-    needs: [secrets]
+    #needs: [secrets]
     runs-on: macos-12
     steps:
       # Uncomment to manually select latest Xcode if needed
@@ -73,7 +73,7 @@ jobs:
         # Submodule Loop patches:
         run: |
           wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P ./#{GITHUB_WORKSPACE}/Loop/
-          cd Loop
+          cd ./#{GITHUB_WORKSPACE}/Loop/
           git apply bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -v --whitespace=fix
 
         # Submodule OmniBLE patches:
