--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -16,7 +16,7 @@ env:
   SYNC_UPSTREAM: 'true' # set to 'false' or 'true' to disable / enable syncing of fork with upstream repository
 
 jobs:
-  secrets:
+  #secrets:
     uses: ./.github/workflows/validate_secrets.yml
     secrets: inherit
 
