--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -71,11 +71,8 @@ jobs:
       # Customize Loop: Download and apply patches
       - name: Customize Loop
         # Submodule Loop patches:
-        run: |
-          wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P ./#{GITHUB_WORKSPACE}/Loop/
-          cd ./#{GITHUB_WORKSPACE}/Loop/
-          git apply bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -v --whitespace=fix --index
-
+        run: wget https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch -P #{GITHUB_WORKSPACE}/Loop | git apply -v --index --whitespace=fix
+        
         # Submodule OmniBLE patches:
         
         # Submodule RileyLink_iOS patches:
