--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -72,14 +72,21 @@ jobs:
       # Customize Loop: Download and apply patches
       - name: Customize Loop
         if: ${{ env.CUSTOMIZE_APP == 'true'}}
-        # Submodule Loop patches:
+        
         run: |
+        
+          # LoopWorkspace patches
+          git apply ./patches/mychanges.patch -v --whitespace=fix
+        
+          # Submodule Loop patches:
+        
           wget -qO- https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch | git apply --directory=Loop -v --whitespace=fix
 
-        # Submodule OmniBLE patches:
+          # Submodule OmniBLE patches:
         
-        # Submodule RileyLink_iOS patches:
-        # ... etcetera
+          # Submodule RileyLink_iOS patches:
+          
+          # ... etcetera
     
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
