build_loop.yml: patch -p1 < ./patches/mychanges.patch

--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -76,7 +76,8 @@ jobs:
         run: |
         
           # LoopWorkspace patches
-          git apply ./patches/mychanges.patch -v --whitespace=fix
+          #git apply ./patches/mychanges.patch -v --whitespace=fix
+          patch -p1 < ./patches/mychanges.patch
         
           # Submodule Loop patches:
         
