build_loop.yml: combine workspace and submodule patches

--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -82,7 +82,7 @@ jobs:
         
           # Submodule Loop patches:
         
-          #wget -qO- https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch | git apply --directory=Loop -v --whitespace=fix
+          wget -qO- https://github.com/bjornoleh/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch | git apply --directory=Loop -v --whitespace=fix
 
           # Submodule OmniBLE patches:
         
