--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -83,11 +83,11 @@ jobs:
 
           # Submodule Loop patches:
           # Template for customizing submodule Loop based on Loop and Learn "Apply CustomTypeOne LoopPatches"
-          #wget -qO- https://github.com/loopnlearn/Loop/commit/b3ba20892fb4f516d4d53c73a51ffbc80960ce3f.patch | git apply --directory=Loop -v --whitespace=fix
+          wget -qO- https://github.com/loopnlearn/Loop/commit/b3ba20892fb4f516d4d53c73a51ffbc80960ce3f.patch | git apply --directory=Loop -v --whitespace=fix
           
           # Submodule LoopKit patches:
           # Template for customizing submodule LoopKit based on Loop and Learn "Apply CustomTypeOne LoopPatches"
-          #wget -qO- https://github.com/loopnlearn/LoopKit/commit/21816dfe073c871c2a580c9c352d6e9072a730be.patch | git apply --directory=LoopKit -v --whitespace=fix
+          wget -qO- https://github.com/loopnlearn/LoopKit/commit/21816dfe073c871c2a580c9c352d6e9072a730be.patch | git apply --directory=LoopKit -v --whitespace=fix
           
           # Add patches to other submodiles following the templates above, 
           # and specify the submodule by setting the correct '--directory=(submodule_name)'
