--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -77,18 +77,18 @@ jobs:
         run: |
 
           # LoopWorkspace patches
-          # Applies any patches located in the LoopWorkspace/patches/ directory
-          shopt -s extglob
-          if $(ls ./patches/!(*@(.cmd|.md|.sh)) &> /dev/null); then
-            git apply ./patches/!(*@(.cmd|.md|.sh)) -v --whitespace=fix
+          # -applies any patches located in the LoopWorkspace/patches/ directory
+          if $(ls ./patches/* &> /dev/null); then
+          git apply ./patches/* --exclude=save_patches_here.md --allow-empty -v --whitespace=fix
           fi
 
           # Submodule Loop patches:
-          # Template for customizing submodule Loop based on CustomTypeOne/LoopPatches (remove the "#" sign from the beginning of the line below to activate):
-          #wget -qO- https://raw.githubusercontent.com/CustomTypeOne/LoopPatches/main/LoopPatch.txt | git apply --directory=Loop -v --whitespace=fix
+          # Template for customizing submodule Loop (remove the "#" sign from the beginning of the line below to activate):
+          # Test:  Change default of pizza icon to 6 hours absorption time
+          wget -qO- https://github.com/loopnlearn/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch | git apply --directory=Loop -v --whitespace=fix
           
           # Submodule LoopKit patches:
-          # Template for customizing submodule LoopKit based on CustomTypeOne/LoopPatches (remove the "#" sign from the beginning of the line below to activate):
+          # Template for customizing submodule LoopKit (remove the "#" sign from the beginning of the line below to activate):
           #wget -qO- https://raw.githubusercontent.com/CustomTypeOne/LoopPatches/main/LoopkitPatch.txt | git apply --directory=LoopKit -v --whitespace=fix
           
 
