--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -83,15 +83,15 @@ jobs:
           fi
 
           # Submodule Loop patches:
-          # Template for customizing submodule Loop (remove the "#" sign from the beginning of the line below to activate):
-          # Test:  Change default of pizza icon to 6 hours absorption time
-          wget -qO- https://github.com/loopnlearn/Loop/commit/bbcf523f918fdd3ed3403a21df991f8de19c75ad.patch | git apply --directory=Loop -v --whitespace=fix
+          # Template for customizing submodule Loop (changes Loop app name to "MyCustomizedLoop")
+          # Remove the "#" sign from the beginning of the line below to activate:
+          wget -qO- https://github.com/loopnlearn/Loop/commit/1468358552babba21da44a4a5bb6ae679588bc66.patch | git apply --directory=Loop -v --whitespace=fix
           
           # Submodule LoopKit patches:
-          # Template for customizing submodule LoopKit (remove the "#" sign from the beginning of the line below to activate):
-          #wget -qO- https://raw.githubusercontent.com/CustomTypeOne/LoopPatches/main/LoopkitPatch.txt | git apply --directory=LoopKit -v --whitespace=fix
+          # Template for customizing submodule LoopKit 
+          # Copy url from a GitHub commit or pull request and insert below, and remove the "#" sign from the beginning of the line below to activate):
+          #wget -qO- url_to_github_commit.patch | git apply --directory=LoopKit -v --whitespace=fix
           
-
           # Submodule xxxxx patches:
 
           # Add patches for customization of additional submodules by following the templates above, 
