build_loop.yml: comment out patch template for submodule Loop

--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -85,7 +85,7 @@ jobs:
           # Submodule Loop patches:
           # Template for customizing submodule Loop (changes Loop app name to "MyCustomizedLoop")
           # Remove the "#" sign from the beginning of the line below to activate:
-          wget -qO- https://github.com/loopnlearn/Loop/commit/1468358552babba21da44a4a5bb6ae679588bc66.patch | git apply --directory=Loop -v --whitespace=fix
+          #wget -qO- https://github.com/loopnlearn/Loop/commit/1468358552babba21da44a4a5bb6ae679588bc66.patch | git apply --directory=Loop -v --whitespace=fix
           
           # Submodule LoopKit patches:
           # General template for customizing submodule LoopKit 
