--- a/.github/workflows/monitor_updates.yml
+++ b/.github/workflows/monitor_updates.yml
@@ -1,4 +1,4 @@
-name: 'Upstream Sync'
+name: 'Monitor updates'
 
 on:
   schedule:
@@ -7,22 +7,26 @@ on:
 
   workflow_dispatch:  # click the button on Github repo!
 
+env:
+  UPSTREAM_REPO: LoopKit/LoopWorkspace
+  UPSTREAM_BRANCH: main
+  TARGET_BRANCH: main
+
 jobs:
-  sync_latest_from_upstream:
+  check_latest_from_upstream:
     runs-on: ubuntu-latest
-    name: Sync latest commits from upstream repo
+    name: Check latest commits from upstream repo
 
     steps:
     # REQUIRED step
     # Step 1: run a standard checkout action, provided by github
     - name: Checkout target repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         # optional: set the branch to checkout,
         # sync action checks out your 'target_sync_branch' anyway
-        ref:  my-branch
-        # REQUIRED if your upstream repo is private (see wiki)
-        persist-credentials: false
+        #submodules: recursive (perhaps not required to check out submodules recursively to detect changes for LoopWorkspace?)
+        ref: ${{ env.TARGET_BRANCH }}
 
     # REQUIRED step
     # Step 2: run the sync action
@@ -30,20 +34,19 @@ jobs:
       id: sync
       uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
       with:
-        target_sync_branch: my-branch
+        target_sync_branch: ${{ env.TARGET_BRANCH }}
+        #target_branch_checkout_args: --recurse-submodules
+        shallow_since: 6 months ago
         # REQUIRED 'target_repo_token' exactly like this!
-        target_repo_token: ${{ secrets.GITHUB_TOKEN }}
-        upstream_sync_branch: main
-        upstream_sync_repo: aormsby/Fork-Sync-With-Upstream-action
-        upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
-
-        # Set test_mode true to run tests instead of the true action!!
-        test_mode: true
+        target_repo_token: ${{ secrets.GH_PAT }}
+        upstream_sync_branch: ${{ env.UPSTREAM_BRANCH }}
+        upstream_sync_repo: ${{ env.UPSTREAM_REPO }}
       
     # Step 3: Display a sample message based on the sync output var 'has_new_commits'
     - name: New commits found
       if: steps.sync.outputs.has_new_commits == 'true'
-      run: echo "New commits were found to sync."
+      run: echo "New commits were found, starting Build Loop workflow."
+      uses: ./.github/workflows/build_loop.yml
     
     - name: No new commits
       if: steps.sync.outputs.has_new_commits == 'false'
