--- a/.github/workflows/monitor_updates.yml
+++ b/.github/workflows/monitor_updates.yml
@@ -54,7 +54,8 @@ jobs:
     - name: Show value of 'has_new_commits'
       run: echo ${{ steps.sync.outputs.has_new_commits }}
       
+    - uses: actions/checkout@v3  
     - name: Launch Build Loop workflow
-      if: steps.sync.outputs.has_new_commits == 'true'
       id: launch
+      if: steps.sync.outputs.has_new_commits == 'true'
       uses: ./.github/workflows/build_loop.yml
