--- a/.github/workflows/monitor_updates.yml
+++ b/.github/workflows/monitor_updates.yml
@@ -54,6 +54,9 @@ jobs:
     - name: Show value of 'has_new_commits'
       run: echo ${{ steps.sync.outputs.has_new_commits }}
       
+    - uses: actions/checkout@v3 # Necessary to access local action
+      with:
+        ref: ${{ env.TARGET_BRANCH }}
     - name: Launch Build Loop workflow
       id: launch
       #if: steps.sync.outputs.has_new_commits == 'true'
