--- a/.github/workflows/monitor_updates.yml
+++ b/.github/workflows/monitor_updates.yml
@@ -58,15 +58,8 @@ jobs:
       with:
         ref: ${{ env.TARGET_BRANCH }}
         
-launch_build_loop:
-  #if: steps.sync.outputs.has_new_commits == 'true'
-  - uses: actions/checkout@v3 # Necessary to access local action
-    with:
-        ref: ${{ env.TARGET_BRANCH }}
-  - name: Launch Build Loop workflow
-    needs: check_latest_from_upstream
+  launch_build_loop:
     uses: ./.github/workflows/build_loop.yml
-
-
-      
-      
+    #if: steps.sync.outputs.has_new_commits == 'true'
+    needs: check_latest_from_upstream
+    secrets: inherit
