--- a/.github/workflows/monitor_updates.yml
+++ b/.github/workflows/monitor_updates.yml
@@ -56,6 +56,7 @@ jobs:
         
   launch_build_loop:
     uses: ./.github/workflows/build_loop.yml
-    if: steps.sync.outputs.has_new_commits == 'true'
     needs: check_latest_from_upstream
+    if: ${{needs.check_latest_from_upstream.steps.sync.outputs.has_new_commits}}
     secrets: inherit
+    
