build_loop.yml: remove '--exclude=' from 'git apply'

--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -74,7 +74,7 @@ jobs:
           # LoopWorkspace patches
           # -applies any patches located in the LoopWorkspace/patches/ directory
           if $(ls ./patches/* &> /dev/null); then
-          git apply ./patches/* --exclude=save_patches_here.md --allow-empty -v --whitespace=fix
+          git apply ./patches/* --allow-empty -v --whitespace=fix
           fi
 
           # Submodule Loop patches:
