Update build_loop.yml: revert run-name changes

--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -1,5 +1,5 @@
 name: 4. Build Loop
-run-name: Build Loop ${{ github.env.UPSTREAM_BRANCH }}
+run-name: Build Loop
 on:
   workflow_dispatch:
   workflow_call:
