--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -2,20 +2,25 @@ name: 4. Build Loop
 run-name: Build Loop
 on:
   workflow_dispatch:
+  workflow_call:
   
   ## Remove the "#" sign from the beginning of the line below to get automated builds on push (code changes in your repository)
   #push:
 
-  ## Remove the "#" sign from the beginning of the two lines below to get automated builds every two months
-  #schedule:
-    #- cron: '0 17 1 */2 *' # Runs at 17:00 UTC on the 1st in Jan, Mar, May, Jul, Sep and Nov.
+env:
+  UPSTREAM_REPO: LoopKit/LoopWorkspace
+  UPSTREAM_BRANCH: main # upstream branch to sync from
+  TARGET_BRANCH: main # branch on fork to build from
+  SYNC_UPSTREAM: 'true' # set to 'false' or 'true' to disable / enable syncing of fork with upstream repository
 
 jobs:
   secrets:
+    name: Secrets
     uses: ./.github/workflows/validate_secrets.yml
     secrets: inherit
-    
-  build:
+
+  upstream_sync_and_build:
+    name: Sync and build
     needs: secrets
     runs-on: macos-12
     steps:
@@ -28,7 +33,63 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+          ref: ${{ env.TARGET_BRANCH }} 
       
+      # Run the sync action
+      - name: Sync upstream changes
+        if: ${{ env.SYNC_UPSTREAM == 'true' }}
+        id: sync
+        uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
+        with:
+          target_sync_branch: ${{ env.TARGET_BRANCH }}
+          target_branch_checkout_args: --recurse-submodules
+          shallow_since: 6 months ago
+          # REQUIRED 'target_repo_token' exactly like this!
+          target_repo_token: ${{ secrets.GH_PAT }}
+          upstream_sync_branch: ${{ env.UPSTREAM_BRANCH }}
+          upstream_sync_repo: ${{ env.UPSTREAM_REPO }}
+          # upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
+      
+      # Step 3: Display a sample message based on the sync output var 'has_new_commits'
+      - name: New commits found
+        if: steps.sync.outputs.has_new_commits == 'true'
+        run: echo "New commits were found to sync."
+    
+      - name: No new commits
+        if: steps.sync.outputs.has_new_commits == 'false'
+        run: echo "There were no new commits."
+      
+      - name: Show value of 'has_new_commits'
+        run: echo ${{ steps.sync.outputs.has_new_commits }}
+              
+      # Customize Loop: Download and apply patches
+      - name: Customize Loop
+        run: |
+
+          # LoopWorkspace patches
+          # -applies any patches located in the LoopWorkspace/patches/ directory
+          if $(ls ./patches/* &> /dev/null); then
+          git apply ./patches/* --allow-empty -v --whitespace=fix
+          fi
+
+          # Submodule Loop patches:
+          # Template for customizing submodule Loop (changes Loop app name to "CustomLoop")
+          # Remove the "#" sign from the beginning of the line below to activate:
+          #wget -qO- https://github.com/loopnlearn/Loop/commit/d206432b024279ef710df462b20bd464cd9682d4.patch | git apply --directory=Loop -v --whitespace=fix
+          
+          # Submodule LoopKit patches:
+          # General template for customizing submodule LoopKit 
+          # Copy url from a GitHub commit or pull request and insert below, and remove the "#" sign from the beginning of the line to activate:
+          #wget -qO- url_to_github_commit.patch | git apply --directory=LoopKit -v --whitespace=fix
+          
+          # Submodule xxxxx patches:
+
+          # Add patches for customization of additional submodules by following the templates above, 
+          # and make sure to specify the submodule by setting "--directory=(submodule_name)".
+          # Several patches may be added per submodule.
+          # Adding comments (#) may be useful to easily tell the individual patches apart.
+          
+          
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
         run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
